--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
     "next": "^13.4.19",
+    "rc-slider": "^10.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
+    "@types/rc-slider": "^9.3.1",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
