--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "i18next": "^23.5.1",
     "lucide-react": "^0.279.0",
     "next": "^13.4.19",
     "rc-slider": "^10.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-i18next": "^13.2.2",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
