--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -22,6 +23,8 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "accordion": "^3.0.2",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
@@ -33,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
     "react-i18next": "^13.2.2",
+    "shadcn-ui": "^0.4.0",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
