--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "framer-motion": "^10.16.4",
+    "geolib": "^3.3.4",
     "i18next": "^23.5.1",
     "lucide-react": "^0.279.0",
     "next": "^13.4.19",
