--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next": "^23.5.1",
     "lucide-react": "^0.279.0",
     "next": "^13.4.19",
+    "nextjs-progressbar": "^0.0.16",
     "rc-slider": "^10.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
